# safe-clean

./: Cargo.toml  action.yml  install.sh
.github/workflows/: action-self-test.yml  ci.yml  release.yml
src/: cleanup.rs  cli.rs  discovery.rs  main.rs  tui.rs  utils.rs
src/cleanup/: dev.rs  docker.rs  temp.rs
src/cli/: large.rs  list.rs
