[package]
name = "safe-clean"
version = "0.2.0"
edition = "2021"
authors = ["npsg02"]
description = "Safe disk cleanup CLI/TUI tool"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
ratatui = "0.24"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
walkdir = "2.4"
byte-unit = "4.0"
chrono = { version = "0.4", features = ["serde"] }
dialoguer = "0.11"
indicatif = "0.17"
human_bytes = "0.4"
